# WkWhisperKey

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
.cache/: .gitignore  .keep.txt
.github/workflows/: android-build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp  whispernet.cpp  wk_safety.cpp  wk_whisper_preprocess.cpp
android/app/src/main/java/ai/willkim/wkwhisperkey/: CandidateView.kt  FineTuneWorker.java  FineTuneWorker.kt  LogReporter.kt  WhisperDB.java  WhisperDao.java  WhisperData.java  WhisperIME.java  WhisperIME.kt  WhisperStore.kt  WhisperVisualizer.kt  WkApp.kt  WkLog.kt  WkWhisperKeyIME.kt  화자 토큰 분리 사양서 (v1.0).txt
android/app/src/main/java/ai/willkim/wkwhisperkey/audio/: AudioExtensions.kt  WkAudioCapture.kt  WkAudioInput.kt  WkAudioMultiplexer.kt  WkBitwisePhaseSeparator.kt  WkIntEnergyAnalyzer.kt  WkMicArrayManager.kt  WkRootBeaconService.kt  WkVoiceSeparator.kt  WkVoiceSeparatorService.kt  WkVoiceTokenizer.kt
android/app/src/main/java/ai/willkim/wkwhisperkey/core/: WkIntentRouter.kt  WkSpatialSeparator.kt  WkWhisperEngine.kt
android/app/src/main/java/ai/willkim/wkwhisperkey/engine/: WhisperEngine.kt
android/app/src/main/res/layout/: wk_keyboard.xml
android/app/src/test/kotlin/ai/willkim/wkwhisperkey/: PrintRedirect.kt  WkTestBase.kt
core/: build.gradle
core/src/test/kotlin/: WkBitwisePhaseSeparatorTest.kt
gradle/wrapper/: gradle-wrapper.properties
scripts/: cache-manager.sh  gradlew  init-gradle.sh
(+28 files in other folders)
